test/good/unbound-loop-1.expected.out
[HIGH] UnboundLoops: Found unbounded loop
test/good/unbound-loop-1.tact:3:12:
  2 |     let a: Int = 20; // read-only variable
> 3 |     while (a > 10) { // error: a is not changing within the loop
                 ^
  4 |     }
The condition variable doesn't change inside the loop
Help: Consider changing the variable inside the loop to ensure it terminates
See: https://nowarp.io/tools/misti/docs/detectors/UnboundLoops